--- a/1 lesson/tsconfig.json
+++ b/1 lesson/tsconfig.json
@@ -2,7 +2,7 @@
   "compilerOptions": {
     "target": "es2016", // į kokią JavaScript versiją paversti kodą                 
     "rootDir": "./src", // aplankas, kuriame ieškoti TypeScript failų                           
-    "outDir": "./public/js", // aplankas į kurį sudėti transpiliuotus JavaScript failus                                    
+    // "outDir": "./public/js", // aplankas į kurį sudėti transpiliuotus JavaScript failus                                    
     "sourceMap": true, // ar susieti transpiliuoto JavaScript failų eilutes su orginalių failų eilutėmis                           
     "forceConsistentCasingInFileNames": true, // ar versti vadinti failus pagal vienodą failų įvardinimo sintaksę
     "strict": true, // ar kodas privalo būti griežtos sintaksės                            
@@ -21,4 +21,9 @@
     "removeComments": true, // ar pašalinti komentarus sukompiliuotuose failuose                    
     "skipLibCheck": true // ar praleisti tipų tikrinimą naudojant bibliotekas
   },
+  "include": [         //arba palikti // "outDir": "./public/js", // aplankas į kurį sudėti transpiliuotus JavaScript failus
+    "./src/main.ts",
+    "./src/event-listener.ts",
+    "./src/primitive-types.ts"
+  ]
 }
